--- a/vignettes/event_detection.Rmd
+++ b/vignettes/event_detection.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r message=FALSE}
 library(dplyr)
 library(ggplot2)
-library(GECOr)
+library(rgeco)
 library(here)
 ```
 
