--- a/vignettes/event_detection.Rmd
+++ b/vignettes/event_detection.Rmd
@@ -19,7 +19,7 @@ library(ggplot2)
 library(rgeco)
 ```
 
-An event is defined here as consecutive time steps where a certain condition is fulfilled - yielding a vector of a logical (boolean) variable. This vignette demonstrates how such events are derived from the boolean vector using the GECOr function `get_consecutive()`, and a time series data frame re-arranged and labelled with sequential time steps into a given event (`eventstep`), using the GECOr function `align_events()`. 
+An event is defined here as consecutive time steps where a certain condition is fulfilled - yielding a vector of a logical (boolean) variable. This vignette demonstrates how such events are derived from the boolean vector using the rgeco function `get_consecutive()`, and a time series data frame re-arranged and labelled with sequential time steps into a given event (`eventstep`), using the rgeco function `align_events()`. 
 
 ## Prepare data
 
